--- a/kalashnikov/sass/media.sass
+++ b/kalashnikov/sass/media.sass
@@ -216,9 +216,13 @@
             padding: 40px 20px
             .big-title__text
                 font-size: 28px
-            .form__input
+            .dropdown__value
+                font-size: 16px
+            .form__input, .dropdown__trigger
                 padding: 5px 10px
                 font-size: 16px
+                &-text
+                    font-size: 16px
             
     .form
         &__input
