--- a/citadel/sass/media.sass
+++ b/citadel/sass/media.sass
@@ -6,6 +6,9 @@
     
     .contacts
         padding-top: 0px
+        display: flex
+        align-items: center
+        justify-content: center
         .about
             &__text
                 margin-top: 0px
@@ -20,9 +23,14 @@
 
     .main
         padding: 80px 0px 95px
+        padding: 0
 
     .about
         padding-top: 80px
+        padding-top: 0px
+        display: flex
+        align-items: center
+        justify-content: center
 
     .portfolio
         &__wrapper
@@ -39,7 +47,7 @@
 
 @media screen and ( max-height: 800px )
     .portfolio, .about
-        padding-top: 30px
+        // padding-top: 30px
 
 @media screen and ( max-width: 1060px )
     .header
@@ -83,6 +91,7 @@
 
     .main
         height: auto
+        margin-top: 60px
         .swiper-wrapper
             display: block
 
@@ -194,11 +203,12 @@
         max-width: 250px
 
     .about
+        padding-top: 0
         &__title
             margin-bottom: 30px
 
     .main
-        padding: 90px 0px 165px
+        padding: 40px 0px 165px
 
     .form
         &__button
