--- a/citadel/sass/style.sass
+++ b/citadel/sass/style.sass
@@ -204,7 +204,10 @@ section
             margin-top: 1.4em
 
 .portfolio
-    padding-top: 50px
+    // padding-top: 50px
+    display: flex
+    align-items: center
+    justify-content: center
     &__wrapper
         display: grid
         grid-template-columns: repeat(4, 1fr)
@@ -312,7 +315,7 @@ section
             outline: none
     &__input
         border-bottom: 1px solid #656565
-        padding: 6px 0px
+        padding: 6px 0px        
         &_err
             color: #fd4a4a
             border-bottom: 1px solid #fd4a4a
@@ -519,3 +522,11 @@ section
         max-width: 480px
     &_documents
         max-width: 520px
+
+input
+    outline: none
+
+input:-webkit-autofill
+    -webkit-box-shadow: inset 0 0 0 50px $main_bg !important
+    -webkit-text-fill-color: #fff !important
+    color: #fff !important
