--- a/event/assets/css/custom.css
+++ b/event/assets/css/custom.css
@@ -500,6 +500,7 @@ main {
 
 .navbar .navbar-brand {
     padding: 0 !important;
+    flex-shrink: 0;
 }
 
 .header_blue{
@@ -834,7 +835,8 @@ main {
 
     .navbar-brand img{
         width: 100%;
-        height: auto;
+        height: auto !important;
+        flex-shrink: 0;
     }
 
     .gallery__deco:nth-child(1){
