--- a/studio/sass/fonts.sass
+++ b/studio/sass/fonts.sass
@@ -2,6 +2,14 @@
     font-family: 'Gotham Pro'
     font-style: normal
     font-display: swap
+    font-weight: 300
+    src: url(../fonts/GothamPro-Light.woff2) format('woff2'),
+    url(../fonts/GothamPro-Light.woff) format('woff')
+
+@font-face
+    font-family: 'Gotham Pro'
+    font-style: normal
+    font-display: swap
     font-weight: 400
     src: url(../fonts/GothamPro.woff2) format('woff2'),
     url(../fonts/GothamPro.woff) format('woff')
