--- a/studio/css/keyframes.css
+++ b/studio/css/keyframes.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=keyframes.css.map */
+@-webkit-keyframes bubbles-move{from{-webkit-transform:rotate(180deg) translateX(350px) rotate(180deg);transform:rotate(180deg) translateX(350px) rotate(180deg)}to{-webkit-transform:rotate(540deg) translateX(350px) rotate(540deg);transform:rotate(540deg) translateX(350px) rotate(540deg)}}@keyframes bubbles-move{from{-webkit-transform:rotate(180deg) translateX(350px) rotate(180deg);transform:rotate(180deg) translateX(350px) rotate(180deg)}to{-webkit-transform:rotate(540deg) translateX(350px) rotate(540deg);transform:rotate(540deg) translateX(350px) rotate(540deg)}}
+/*# sourceMappingURL=keyframes.css.map */
