--- a/citadel/sass/style.sass
+++ b/citadel/sass/style.sass
@@ -71,9 +71,10 @@ section
         align-items: center
         padding: 55px 0px
 
-.logo
+.logo 
+    max-width: 212px
+    width: 100%
     &__img
-        max-width: 212px
         width: 100%
         height: auto
 
