--- a/citadel/sass/style.sass
+++ b/citadel/sass/style.sass
@@ -328,6 +328,7 @@ section
     &__input + &__textarea
         margin-top: 18px
     &__textarea
+        width: 100%
         border: 1px solid #656565
         border-radius: 4px
         font-style: italic
